[package]
name = "libultrahdr-sys"
version = "0.1.0"
edition = "2021"
links = "ultrahdr"
description = "A Rust interface to libultrahdr"
keywords = ["libultrahdr", "image", "hdr"]
categories = ["multimedia", "multimedia::encoding", "multimedia::images", "external-ffi-bindings"]
license = "Apache-2.0"
documentation = "https://docs.rs/libultrahdr-sys"

[dependencies]

[build-dependencies]
pkg-config = "0.3.31"
vcpkg = "0.2.15"
bindgen = "0.71.1"
